--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
+    "expo-constants": "^14.0.2",
     "expo-linear-gradient": "^12.0.1",
     "expo-linking": "^3.2.3",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-countdown-circle-timer": "^3.1.0",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5"
